--- a/css/estilos.css
+++ b/css/estilos.css
@@ -3,3 +3,9 @@ body {
     font-family: 'Franklin Gothic Medium';
     color: aquamarine;
 }
+h1 {
+    text-align: center;
+    font-family: 'Segoe UI';
+    color:aqua
+
+}
