--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,7 +5,8 @@ body {
 }
 h1 {
     text-align: center;
-    font-family: 'Segoe UI';
+    font-family: cursive;
+    font-family: Verdana;
     color: blue;
 
 }
